src/render/snapshots/skill_tree__render__tests__clusters_with_display_labels.snap
---
source: src/render/mod.rs
expression: "to_dot(&g, &opts)"
---
digraph SkillTree {
rankdir = "LR";
graph [fontname="Helvetica,Arial,sans-serif"];
node [shape=box, style="rounded,filled", fontname="Helvetica,Arial,sans-serif", fontsize=11, margin="0.18,0.08", penwidth=1.5];
"__cluster_compiler-frontend__" [label="Frontend", style="rounded,filled", peripheries=2, fillcolor="#666666", fontcolor="white"];
"__cluster_compiler-mir__" [label="MIR", style="rounded,filled", peripheries=2, fillcolor="#666666", fontcolor="white"];
"o/r#1" [label="#1: A\nOPEN", fillcolor="#dddddd", fontcolor="black", color="#b1b1b1", URL="https://github.com/o/r/issues/1"];
"o/r#2" [label="#2: B\nOPEN", fillcolor="#dddddd", fontcolor="black", color="#b1b1b1", URL="https://github.com/o/r/issues/2"];
"o/r#3" [label="#3: C\nOPEN", fillcolor="#dddddd", fontcolor="black", color="#b1b1b1", URL="https://github.com/o/r/issues/3"];
"o/r#4" [label="#4: D\nOPEN", fillcolor="#dddddd", fontcolor="black", color="#b1b1b1", URL="https://github.com/o/r/issues/4"];
"__cluster_compiler-frontend__" -> "o/r#1";
"__cluster_compiler-frontend__" -> "o/r#3";
"__cluster_compiler-mir__" -> "o/r#2";
}
