src/render/snapshots/skill_tree__render__tests__label_carries_title_state_and_assignees.snap
---
source: src/render/mod.rs
expression: "to_dot(&g, &opts())"
---
digraph SkillTree {
rankdir = "LR";
graph [fontname="Helvetica,Arial,sans-serif"];
node [shape=box, style="rounded,filled", fontname="Helvetica,Arial,sans-serif", fontsize=11, margin="0.18,0.08", penwidth=1.5];
"o/r#289" [label="#289: Convert check_trait to a judgment\nfunction\nOPEN · alice, bob", fillcolor="#dddddd", fontcolor="black", color="#b1b1b1", URL="https://github.com/o/r/issues/289"];
}
