src/render/snapshots/skill_tree__render__tests__tooltip_includes_state_assignees_and_truncated_body.snap
---
source: src/render/mod.rs
expression: "to_dot(&g, &opts())"
---
digraph SkillTree {
    rankdir = "LR";
    "o/r#1" [label="#1: T", shape=box, style=filled, fillcolor="#dddddd", URL="https://github.com/o/r/issues/1", tooltip="State: OPEN\nAssignees: alice, bob\n\nxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx…"];
}
