src/render/snapshots/skill_tree__render__tests__tooltip_is_cleaned_body.snap
---
source: src/render/mod.rs
expression: "to_dot(&g, &opts())"
---
digraph SkillTree {
rankdir = "LR";
graph [fontname="Helvetica,Arial,sans-serif"];
node [shape=box, style="rounded,filled", fontname="Helvetica,Arial,sans-serif", fontsize=11, margin="0.18,0.08", penwidth=1.5];
"o/r#1" [label="#1: T\nOPEN", fillcolor="#dddddd", fontcolor="black", color="#b1b1b1", URL="https://github.com/o/r/issues/1", tooltip="Heading\nFirst sentence. Bold word. Second sentence here."];
}
